order form created in index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Bus Mall Order Form</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  </head>
+  <body>
+    <form id="newOrderForm">
+  <fieldset class="orderFieldset">
+    <legend>Order Your Buss Mall Products</legend>
 
+    <label>Choose Your Product</label>
+    <select id="productList">
+
+    </select>
+
+    <label for="qty">Quantity</label>
+    <input name="qty" type="number" />
+
+    <label for="name">Name</label>
+    <input name="name" type="text" />
+
+    <label for="address">Address</label>
+    <input name="address" type="text" />
+
+    <label for="city">City</label>
+    <input name="city" type="text" />
+
+    <label for="state">State</label>
+    <input name="state" type="text" />
+
+    <label for="zipCode">Zip Code</label>
+    <input name="zipCode" type="text" />
+
+    <label for="phone">Phone Number</label>
+    <input name="phone" type="text" />
+
+
+    <button type="addToCart">Add To Cart</button>
+  </fieldset>
+</form>
+  </body>
+</html>
