cart.html set up

--- a/cart.html
+++ b/cart.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Cart|BusMall</title>
+    <link rel="stylesheet" type="text/css" href="reset_css.css" />
+    <link rel="stylesheet" type="text/css" href="cart.css" />
+  </head>
+  <body>
+    <h1>Your Orders from BusMall</h1>
+    <ul id="order_list">
 
+    </ul>
+
+
+  <script type="application/javascript" src="cart.js"></script>
+  </body>
+</html>
