constructor for orders going

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <label for="phone">Phone Number</label>
     <input name="phone" type="text" />
 
+    <label for="creditCard">Credit Card Number</label>
+    <input name="creditCard" type="text" />
+
 
     <button type="addToCart">Add To Cart</button>
   </fieldset>
