finished product constructor

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
     <button type="addToCart">Add To Cart</button>
   </fieldset>
 </form>
+  <script type="application/javascript" src="app.js"></script>
   </body>
 </html>
