added listener and handler

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <input name="creditCard" type="text" />
 
 
-    <button type="addToCart">Add To Cart</button>
+    <button id="addToCart" type="submit">Add To Cart</button>
   </fieldset>
 </form>
   <script type="application/javascript" src="app.js"></script>
