--- a/cart.html
+++ b/cart.html
@@ -8,9 +8,19 @@
   </head>
   <body>
     <h1>Your Orders from BusMall</h1>
+    <section>
+      <ul id="user_info">
+        <!-- <li id="user_name"></li>
+        <li id="address"></li>
+        <li id="city_etc"></li>
+        <li id="phone"></li> -->
+      </ul>
     <ul id="order_list">
+      <!-- <li><img src="img/bag.jpg" alt="bag" height="200px" width="200px" /><span>bag. qty:9</span></li>
+      <li><img src="img/bag.jpg" alt="bag" height="200px" width="200px" /><span>bag. qty:9</span></li> -->
 
     </ul>
+    </section>
 
 
   <script type="application/javascript" src="cart.js"></script>
