finished cart page styling

--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
     <title>Cart|BusMall</title>
     <link rel="stylesheet" type="text/css" href="reset_css.css" />
     <link rel="stylesheet" type="text/css" href="cart.css" />
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px|Ubuntu" rel="stylesheet">
   </head>
   <body>
     <h1>Your Orders from BusMall</h1>
@@ -16,9 +17,6 @@
         <li id="phone"></li>
       </ul>
       <ul id="order_list">
-      <!-- <li><img src="img/bag.jpg" alt="bag" height="200px" width="200px" /><span>bag. qty:9</span></li>
-      <li><img src="img/bag.jpg" alt="bag" height="200px" width="200px" /><span>bag. qty:9</span></li> -->
-
       </ul>
     </section>
 
