--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </br>
         <li>
           <button id="addToCart" type="submit">Add To Cart</button>
-          <button id="goToCart" class="go_to_cart" type="submit">View Cart</button>
+          <button id="goToCart" class="go_to_cart" type="submit"><a href="cart.html" target="_blank">View Cart</a></button>
         </li>
     </fieldset>
   </form>
